--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>EasyFix</title>
   </head>
-  <body class="min-h-screen text-text bg-bg">
+  <body class="min-h-screen text-sm text-text bg-bg">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
