feat: ogtags add

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Fav Icons -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -20,7 +23,6 @@
       href="/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="/favicon/site.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +31,45 @@
       rel="stylesheet"
     />
 
-    <title>EasyFix</title>
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://easy-fix.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Easy Fix" />
+    <meta
+      property="og:description"
+      content="The ideal platform to find beginner-friendly issues. Designed to inspire and encourage individuals to initiate their contributions to the open source community."
+    />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/68834718/258658579-017bd2d3-20ab-4fa5-bac4-f67d671a70ea.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="easy-fix.vercel.app" />
+    <meta property="twitter:url" content="https://easy-fix.vercel.app/" />
+    <meta name="twitter:title" content="Easy Fix" />
+    <meta
+      name="twitter:description"
+      content="The ideal platform to find beginner-friendly issues. Designed to inspire and encourage individuals to initiate their contributions to the open source community."
+    />
+    <meta
+      name="twitter:image"
+      content="https://user-images.githubusercontent.com/68834718/258658579-017bd2d3-20ab-4fa5-bac4-f67d671a70ea.png"
+    />
+
+    <!-- HTML Meta Tags -->
+    <title>Easy Fix</title>
+    <meta name="author" content="Vatsal Singh" />
+    <meta
+      name="description"
+      content="The ideal platform to find beginner-friendly issues. Designed to inspire and encourage individuals to initiate their contributions to the open source community."
+    />
+    <meta
+      name="keywords"
+      content="easy fix, easy fix issues, github issues, good first issues, open source, open source contributions, beginner friendly issues"
+    />
+    <link rel="canonical" href="https://easy-fix.vercel.app/" />
   </head>
   <body class="min-h-screen text-sm text-text bg-bg">
     <div id="root"></div>
