feat install typescript and migrate

--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
   </head>
   <body class="min-h-screen text-sm text-text bg-bg">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
