Migrate project from tailwind to panda css

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     />
     <link rel="canonical" href="https://easy-fix.vercel.app/" />
   </head>
-  <body class="min-h-screen text-sm text-text bg-bg">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
